src/App.css
.App {
  text-align: center;
}

/* homepage */
.card-container {
  padding: 3em;
  display: flex;
  flex-direction: column;
  margin: auto;
  justify-content: center;
  height: 40vh;
  align-items: center;
}

.button-container {
  width: 700px;
  margin: 0em 4em;
  display: flex;
  margin: auto;
  justify-content: center;
  flex-wrap: wrap;
}

/* components */

.button {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 80px;
  height: 1.5rem;
  border-radius: 10px;
  padding: 1rem 0.4rem;
  margin: 1rem;
  font-size: 1rem;
}

/* user */
.user-card {
  font-family: sans-serif;
  background-color: white;
  border-radius: 20px;
  width: 700px;
  height: 300px;
  margin: 1.5rem auto;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.user-details {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 700px;
  height: 180px;
}
.user-info {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 1.5em;
}

.user-details-text {
  font-size: 1rem;
  line-height: 1.5rem;
}

.avatar {
  border-radius: 50%;
  height: 160px;
  width: 160px;
  box-shadow: 2px 2px 5px 3px rgb(94, 94, 94);
}

@media only screen and (max-width: 750px) {
  .button-container {
    padding: 0em 4em;
    width: 70%;
  }

  .user-card {
    border-radius: 15px;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 8px 18px -5px,
      rgba(0, 0, 0, 0.3) 0px 4px 8px -4px;
    width: 480px;
    height: 190px;
    margin: 1.5rem auto;
  }

  .user-details {
    width: 420px;
    height: 140px;
  }

  .avatar {
    border-radius: 50%;
    height: 100px;
    width: 100px;
    box-shadow: 1px 1px 2px 1px rgb(94, 94, 94);
  }

  .button {
    width: 60px;
    height: 0.9rem;
    border-radius: 5px;
    padding: 01rem 0.4rem;
    margin: 1rem;
    font-size: 01rem;
  }
}

